# toolfi

./: .env.check  .env.prod-check  .env.vercel  .gitignore  README.md  ROADMAP.md  submission-draft.md  vercel.json
.github/workflows/: publish-mcp.yml
api/: index.js  package-lock.json  package.json  server.js
mcp-server/: README.md  pyproject.toml
mcp-server/src/: __init__.py  chains.py  defillama.py  lifi.py  models.py  server.py
mcp-server/src/clients/: __init__.py  base.py  coingecko.py  defillama.py  goplus.py  lifi.py
script/: Deploy.s.sol
skill/: SKILL.md
src/: ToolRegistry.sol
test/: ToolRegistry.t.sol
web/: package-lock.json  package.json
web/public/: llms.txt  robots.txt  server.json
web/public/.well-known/: mcp.json
web/src/app/: contracts.ts  layout.tsx  page.tsx  providers.tsx
web/src/app/api/[transport]/: route.ts
