[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolfi"
version = "0.1.0"
description = "Crypto data APIs MCP server - token security, prices, DeFi yields, bridge quotes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Clawd" }
]
keywords = ["mcp", "crypto", "defi", "blockchain", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
toolfi = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
